apps/base/dolt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dolt
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
