apps/base/dolt/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolt-headless
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: dolt
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: dolt-tailnet
  annotations:
    tailscale.com/hostname: dolt
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  allocateLoadBalancerNodePorts: false
  selector:
    app.kubernetes.io/name: dolt
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
